tests/ui/struct_with_generic_params.stderr
error: Given struct must not have generic parameters.
  --> tests/ui/struct_with_generic_params.rs:17:11
   |
17 | struct Foo<T> {}
   |           ^^^
   |
   = help: Use `struct Foo {};`
